--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,6 +11,18 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
+    <table class="table table-dark">
+        <thead>
+            <tr>
+                <th>Test Name</th>
+            </tr>
+        </thead>
+        <tr th:each="job : ${jobs}">
+            <td th:text="${job.getEmployer()}">
+            <td>lol</td>
+        </tr>
+    </table>
+
 
 </div>
 
