--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,16 +11,48 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-    <table class="table table-dark">
-        <thead>
-            <tr>
-                <th>Test Name</th>
+<!--    <table class="job-listing">-->
+<!--        <tbody th:each="job : ${jobs}">-->
+<!--            <tr>-->
+<!--                <th>ID</th>-->
+<!--                <td th:text="${job.getId()}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>Name</th>-->
+<!--                <td th:text="${job.getName()}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>Employer</th>-->
+<!--                <td th:text="${job.getEmployer()}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>Location</th>-->
+<!--                <td th:text="${job.getLocation()}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>Position Type</th>-->
+<!--                <td th:text="${job.getPositionType()}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>Skill</th>-->
+<!--                <td th:text="${job.getCoreCompetency()}"></td>-->
+<!--            </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
+
+    <table class="job-listing">
+        <tbody>
+            <tr th:each="job : ${jobs}">
+                <td>
+                    <p th:text="'ID: ' + ${job.getId()}"></p>
+                    <p th:text="'Name: ' + ${job.getName()}"></p>
+                    <p th:text="'Employer: ' + ${job.getEmployer()}"></p>
+                    <p th:text="'Location: ' + ${job.getLocation()}"></p>
+                    <p th:text="'Position Type: ' + ${job.getPositionType()}"></p>
+                    <p th:text="'Skill: ' + ${job.getCoreCompetency()}"></p>
+                </td>
             </tr>
-        </thead>
-        <tr th:each="job : ${jobs}">
-            <td th:text="${job.getEmployer()}">
-            <td>lol</td>
-        </tr>
+        </tbody>
     </table>
 
 
